<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/orange_50"
        app:layout_constraintBottom_toTopOf="@id/trackRecyclerView"/>
    <ImageView
        android:id="@+id/albumArtImageView"
        android:layout_width="@dimen/album_art_dimens"
        android:layout_height="@dimen/album_art_dimens"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_album_placeholder" />

    <TextView
        android:id="@+id/albumNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumArtImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/albumArtistTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/space_4dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumArtImageView"
        app:layout_constraintTop_toBottomOf="@+id/albumNameTextView" />

    <TextView
        android:id="@+id/albumPublishedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/space_4dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumArtImageView"
        app:layout_constraintTop_toBottomOf="@+id/albumArtistTextView" />

    <TextView
        android:id="@+id/albumSummaryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:maxLines="5"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumArtImageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginBottom="@dimen/space_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumSummaryTextView" />

    <TextView
        android:id="@+id/listenerCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginBottom="@dimen/space_4dp"
        android:drawablePadding="@dimen/space_4dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:drawableStartCompat="@drawable/ic_headphone"
        app:layout_constraintBottom_toTopOf="@+id/playCountTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumArtImageView" />

    <TextView
        android:id="@+id/playCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:drawablePadding="@dimen/space_4dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:drawableStartCompat="@drawable/ic_play_button"
        app:layout_constraintBottom_toBottomOf="@+id/albumArtImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/albumArtImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>