<resources>
    <string name="app_name">LetTheMusicPlay</string>
    <string name="search">Search</string>
    <string name="album_art_content_description">album art image</string>
    <string name="no_internet_message">Please check your network connectivity</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>