<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchResultConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchAlbumFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginTop="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:layout_marginBottom="@dimen/space_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>